--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -2,8 +2,11 @@
 <html>
 <head>
     <title>Simple Forms App</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    {% block content %}{% endblock %}
+<body class="bg-light">
+    <div class="container py-4">
+        {% block content %}{% endblock %}
+    </div>
 </body>
 </html>
