--- a/myproject/templates/create_form.html
+++ b/myproject/templates/create_form.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Create New Form</h1>
-<form method="post">
-  <label>Title</label>
-  <input type="text" name="title" required>
-  <button type="submit">Create</button>
+<h1 class="mb-4">Create New Form</h1>
+<form method="post" class="mb-3">
+  <div class="mb-3">
+    <label class="form-label">Title</label>
+    <input class="form-control" type="text" name="title" required>
+  </div>
+  <button class="btn btn-primary" type="submit">Create</button>
 </form>
 {% endblock %}
