--- a/myproject/templates/fill_form.html
+++ b/myproject/templates/fill_form.html
@@ -1,11 +1,22 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>{{ form.title }}</h1>
-<form method="post">
+<h1 class="mb-4">{{ form.title }}</h1>
+<form method="post" class="mb-3">
 {% for question in form.questions %}
-  <label>{{ question.text }}</label><br>
-  <input type="text" name="q_{{ question.id }}" required><br><br>
+  <div class="mb-3">
+    <label class="form-label">{{ question.text }}</label>
+    {% if question.question_type == 'multiple' %}
+      {% for opt in question.options %}
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="q_{{ question.id }}" value="{{ opt.text }}" required>
+          <label class="form-check-label">{{ opt.text }}</label>
+        </div>
+      {% endfor %}
+    {% else %}
+      <input class="form-control" type="text" name="q_{{ question.id }}" required>
+    {% endif %}
+  </div>
 {% endfor %}
-  <button type="submit">Submit</button>
+  <button class="btn btn-primary" type="submit">Submit</button>
 </form>
 {% endblock %}
