--- a/myproject/templates/index.html
+++ b/myproject/templates/index.html
@@ -1,10 +1,17 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Forms</h1>
-<ul>
+<h1 class="mb-4">Forms</h1>
+<ul class="list-group mb-3">
 {% for form in forms %}
-  <li><a href="{{ url_for('fill_form', form_id=form.id) }}">{{ form.title }}</a> - <a href="{{ url_for('add_question', form_id=form.id) }}">Add Questions</a> - <a href="{{ url_for('form_results', form_id=form.id) }}">Results</a></li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    <span>{{ form.title }}</span>
+    <span>
+      <a class="btn btn-sm btn-primary" href="{{ url_for('fill_form', form_id=form.id) }}">Fill</a>
+      <a class="btn btn-sm btn-secondary" href="{{ url_for('add_question', form_id=form.id) }}">Add Questions</a>
+      <a class="btn btn-sm btn-info" href="{{ url_for('form_results', form_id=form.id) }}">Results</a>
+    </span>
+  </li>
 {% endfor %}
 </ul>
-<a href="{{ url_for('create_form') }}">Create New Form</a>
+<a class="btn btn-success" href="{{ url_for('create_form') }}">Create New Form</a>
 {% endblock %}
