--- a/myproject/templates/results.html
+++ b/myproject/templates/results.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>{{ form.title }} - Results</h1>
+<h1 class="mb-4">{{ form.title }} - Results</h1>
 {% for question in form.questions %}
-  <h3>{{ question.text }}</h3>
-  <ul>
+  <h5>{{ question.text }}</h5>
+  <ul class="list-group mb-3">
   {% for answer in question.answers %}
-    <li>{{ answer.answer_text }}</li>
+    <li class="list-group-item">{{ answer.answer_text }}</li>
   {% endfor %}
   </ul>
 {% endfor %}
-<a href="{{ url_for('index') }}">Back</a>
+<a class="btn btn-secondary" href="{{ url_for('index') }}">Back</a>
 {% endblock %}
