--- a/myproject/templates/thank_you.html
+++ b/myproject/templates/thank_you.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 {% block content %}
-<p>Thank you for submitting the form.</p>
-<a href="{{ url_for('index') }}">Back to home</a>
+<p class="fs-4">Thank you for submitting the form.</p>
+<a class="btn btn-primary" href="{{ url_for('index') }}">Back to home</a>
 {% endblock %}
