--- a/myproject/templates/add_question.html
+++ b/myproject/templates/add_question.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1 class="mb-4">Add Question to {{ form.title }}</h1>
+<div class="card">
+<div class="card-body">
+<h1 class="card-title mb-4">Add Question to {{ form.title }}</h1>
 <form method="post" class="mb-3">
   <div class="mb-3">
     <label class="form-label">Question Text</label>
@@ -20,4 +22,6 @@
   <button class="btn btn-primary" type="submit">Add Question</button>
 </form>
 <a class="btn btn-secondary" href="{{ url_for('fill_form', form_id=form.id) }}">Done</a>
+</div>
+</div>
 {% endblock %}
