--- a/myproject/templates/create_form.html
+++ b/myproject/templates/create_form.html
@@ -1,11 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1 class="mb-4">Create New Form</h1>
-<form method="post" class="mb-3">
-  <div class="mb-3">
-    <label class="form-label">Title</label>
-    <input class="form-control" type="text" name="title" required>
+<div class="card">
+  <div class="card-body">
+    <h1 class="card-title mb-4">Create New Form</h1>
+    <form method="post" class="mb-3">
+      <div class="mb-3">
+        <label class="form-label">Title</label>
+        <input class="form-control" type="text" name="title" required>
+      </div>
+      <button class="btn btn-primary" type="submit">Create</button>
+
+    </form>
   </div>
-  <button class="btn btn-primary" type="submit">Create</button>
-</form>
+</div>
 {% endblock %}
