--- a/myproject/templates/fill_form.html
+++ b/myproject/templates/fill_form.html
@@ -1,7 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1 class="mb-4">{{ form.title }}</h1>
+<div class="card">
+<div class="card-body">
+<h1 class="card-title mb-4">{{ form.title }}</h1>
 <form method="post" class="mb-3">
+  <div class="mb-3">
+    <label class="form-label">Email</label>
+    <input class="form-control" type="email" name="email" required>
+  </div>
 {% for question in form.questions %}
   <div class="mb-3">
     <label class="form-label">{{ question.text }}</label>
@@ -19,4 +25,6 @@
 {% endfor %}
   <button class="btn btn-primary" type="submit">Submit</button>
 </form>
+</div>
+</div>
 {% endblock %}
