--- a/myproject/templates/index.html
+++ b/myproject/templates/index.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1 class="mb-4">Forms</h1>
+<div class="card">
+<div class="card-body">
+<h1 class="card-title mb-4">Forms</h1>
 <ul class="list-group mb-3">
 {% for form in forms %}
   <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -14,4 +16,6 @@
 {% endfor %}
 </ul>
 <a class="btn btn-success" href="{{ url_for('create_form') }}">Create New Form</a>
+</div>
+</div>
 {% endblock %}
