--- a/myproject/templates/results.html
+++ b/myproject/templates/results.html
@@ -1,13 +1,34 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1 class="mb-4">{{ form.title }} - Results</h1>
+<div class="card">
+<div class="card-body">
+<h1 class="card-title mb-4">{{ form.title }} - Results</h1>
 {% for question in form.questions %}
-  <h5>{{ question.text }}</h5>
-  <ul class="list-group mb-3">
-  {% for answer in question.answers %}
-    <li class="list-group-item">{{ answer.answer_text }}</li>
-  {% endfor %}
-  </ul>
+  <h5 class="mt-4">{{ question.text }}</h5>
+  {% if question.question_type == 'multiple' %}
+    <canvas id="chart-{{ question.id }}" height="200"></canvas>
+    <script>
+      var ctx = document.getElementById('chart-{{ question.id }}').getContext('2d');
+      new Chart(ctx, {
+        type: 'pie',
+        data: {
+          labels: {{ chart_data[question.id].keys()|list|tojson }},
+          datasets: [{
+            data: {{ chart_data[question.id].values()|list|tojson }},
+            backgroundColor: ['#0d6efd','#198754','#dc3545','#ffc107','#20c997','#6c757d']
+          }]
+        }
+      });
+    </script>
+  {% else %}
+    <ul class="list-group mb-3">
+    {% for answer in question.answers %}
+      <li class="list-group-item">{{ answer.answer_text }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
 {% endfor %}
 <a class="btn btn-secondary" href="{{ url_for('index') }}">Back</a>
+</div>
+</div>
 {% endblock %}
