--- a/myproject/templates/fill_form.html
+++ b/myproject/templates/fill_form.html
@@ -3,6 +3,7 @@
 <div class="card">
 <div class="card-body">
 <h1 class="card-title mb-4">{{ form.title }}</h1>
+{% if error %}<div class="alert alert-danger">{{ error }}</div>{% endif %}
 <form method="post" class="mb-3">
   <div class="mb-3">
     <label class="form-label">Email</label>
@@ -14,14 +15,14 @@
     {% if question.question_type == 'multiple' %}
       {% for opt in question.options %}
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="q_{{ question.id }}" value="{{ opt.text }}" required>
+          <input class="form-check-input" type="radio" name="q_{{ question.id }}" value="{{ opt.text }}" {% if question.is_required %}required{% endif %}>
           <label class="form-check-label">{{ opt.text }}</label>
         </div>
       {% endfor %}
     {% else %}
-      <input class="form-control" type="text" name="q_{{ question.id }}" required>
+      <input class="form-control" type="text" name="q_{{ question.id }}" {% if question.is_required %}required{% endif %}>
     {% endif %}
-  </div>
+    </div>
 {% endfor %}
   <button class="btn btn-primary" type="submit">Submit</button>
 </form>
