Add public and private forms feature
- Modify Form model to add is_public field
- Create database migration for is_public field
- Add /public-forms route to browse public forms
- Update form creation route to support visibility toggle
- Create public forms gallery template
- Add visibility badges to existing templates
- Update base template with navigation link to public forms

This feature allows users to optionally make their forms publicly discoverable while maintaining privacy by default.

--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -25,6 +25,11 @@
                         <a class="nav-link" href="{{ url_for('index') }}">Home</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('public_forms') }}">
+                            <i class="fas fa-globe"></i> Public Forms
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('create_form') }}">Create Form</a>
                     </li>
                 </ul>
