--- a/myproject/templates/create_form.html
+++ b/myproject/templates/create_form.html
@@ -8,8 +8,20 @@
         <label class="form-label">Title</label>
         <input class="form-control" type="text" name="title" required>
       </div>
-      <button class="btn btn-primary" type="submit">Create</button>
 
+      <div class="mb-3">
+        <div class="form-check form-switch">
+          <input class="form-check-input" type="checkbox" id="isPublic" name="is_public" value="1">
+          <label class="form-check-label" for="isPublic">
+            Make this form public
+            <small class="d-block text-muted">
+              Public forms can be discovered and filled by anyone via the Public Forms page.
+            </small>
+          </label>
+        </div>
+      </div>
+
+      <button class="btn btn-primary" type="submit">Create</button>
     </form>
   </div>
 </div>
