--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>FormsApp</title>
+    <title>Gougon Forms</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-lg mb-4">
         <div class="container">
-            <a class="navbar-brand text-white" href="{{ url_for('index') }}">FormsApp</a>
+            <a class="navbar-brand text-white" href="{{ url_for('index') }}">Gougon Forms</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
