--- a/myproject/templates/create_form.html
+++ b/myproject/templates/create_form.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="card">
   <div class="card-body">
-    <h1 class="card-title mb-4">Create New Form</h1>
+    <h1 class="card-title mb-4">Create New Gougon Form</h1>
     <form method="post" class="mb-3">
       <div class="mb-3">
         <label class="form-label">Title</label>
