--- a/myproject/templates/index.html
+++ b/myproject/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="card">
 <div class="card-body">
-<h1 class="card-title mb-4">Forms</h1>
+<h1 class="card-title mb-4">My Gougon Forms</h1>
 <ul class="list-group mb-3">
 {% for form in forms %}
   <li class="list-group-item d-flex justify-content-between align-items-center">
